# webpage2html

./: .gitignore  pyproject.toml  readme.md  setup.py
webpage2html/: __init__.py  service.py  webpage2html.py
