[tool.poetry]
name = "webpage2html"
version = "0.3.7"
description = "Save/convert web pages to a single editable html file"
authors = ["Wenlei Zhu <i@ztrix.me>"]
license = "The Star And Thank Author License (SATA)"
repository="https://github.com/zTrix/webpage2html"
keywords = ["webpage","html","convert"]
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Operating System :: POSIX',
        'Operating System :: MacOS :: MacOS X',
        'Programming Language :: Python',
        'Programming Language :: Python :: 2.6',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Topic :: Software Development',
        'Topic :: System',
        'Topic :: Terminals',
        'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
requests = "^2.23.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
