[tool.poetry]
name = "webpage2html"
version = "0.3.8"
description = "Save/convert web pages to a single editable html file"
authors = ["tthmmts <tthmmts@gmail.com>"]
license = "The Star And Thank Author License (SATA)"
repository="https://github.com/tthmmts/webpage2html"
keywords = ["webpage","html","convert"]
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Operating System :: POSIX',
        'Operating System :: MacOS :: MacOS X',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Topic :: Software Development',
        'Topic :: System',
        'Topic :: Terminals',
        'Topic :: Utilities'
]

[tool.poetry.scripts]
webpage2html = "webpage2html:main"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
requests = "^2.23.0"
selenium = "^3.141.0"
chromedriver-binary = "^83.0"
fire = "^0.3.1"
html5lib = "^1.0.1"
chardet = "^3.0.4"
joblib = "^0.15.1"
pydrive = "^1.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
autopep8 = "^1.5.2"
jupyter-contrib-nbextensions = "^0.5.1"
pandas = "^1.0.3"
openpyxl = "^3.0.3"
xlrd = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
